==> miniwinwm/BluePillDemo/BluePillDemo_SPI_2.4GHz_Radio_Tx/Core/Src/nrf24l01.c <==
#include "stm32f1xx_hal.h"
#include "nrf24l01.h"

void nrf24l01_power_up(bool rx_active_mode)
{
	unsigned char config;

	nrf24l01_read_register(nrf24l01_CONFIG, &config, 1);

	if((config & nrf24l01_CONFIG_PWR_UP) != 0)
		return;

	config |= nrf24l01_CONFIG_PWR_UP;

	nrf24l01_write_register(nrf24l01_CONFIG, &config, 1);

	HAL_Delay(2U);

	if((config & nrf24l01_CONFIG_PRIM_RX) == 0)
		nrf24l01_clear_ce();
	else
	{
		if(rx_active_mode != false)
			nrf24l01_set_ce();
		else
			nrf24l01_clear_ce();
	}
}

void nrf24l01_power_up_param(bool rx_active_mode, unsigned char config)
{
	config |= nrf24l01_CONFIG_PWR_UP;

	nrf24l01_write_register(nrf24l01_CONFIG, &config, 1);

	HAL_Delay(2U);

	if((config & nrf24l01_CONFIG_PRIM_RX) == 0)
		nrf24l01_clear_ce();
	else
	{
		if(rx_active_mode != false)
			nrf24l01_set_ce();
		else
			nrf24l01_clear_ce();
	}
}

void nrf24l01_clear_ce()
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_9, GPIO_PIN_RESET);
	ce_active = true;
}

void nrf24l01_set_ce()
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_9, GPIO_PIN_SET);
	ce_active = false;
}

void nrf24l01_clear_csn()
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_RESET);
	csn_active = true;
}

void nrf24l01_set_csn()
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_SET);
	csn_active = false;
}
